Very rudamentary solution for qualifying battles

--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -64,16 +64,16 @@
             <MudPaper>
                 <MudTable Items="@DevelopedEntrants" Dense="true">
                     <ToolBarContent>
-                        <MudText Typo="Typo.h4">Development</MudText>
+                        <MudText Typo="Typo.h5">Development</MudText>
 
                         <MudSpacer />
 
-                        <MudButtonGroup Variant="Variant.Filled">
+                        <MudButtonGroup>
                             @if (_ranDevelop)
                             {
-                                <MudButton StartIcon="@Icons.Material.Filled.Save" Color="Color.Success" OnClick="SaveDevelopment">Save</MudButton>
+                                <MudButton StartIcon="@Icons.Material.Filled.Save" Color="Color.Success" Variant="Variant.Filled" OnClick="SaveDevelopment">Save</MudButton>
                             }
-                            <MudButton StartIcon="@Icons.Material.Filled.Recycling" Color="Color.Info" OnClick="RunDevelop">Run</MudButton>
+                            <MudButton StartIcon="@Icons.Material.Filled.Recycling" Color="Color.Info" Variant="Variant.Filled" OnClick="RunDevelop">Run</MudButton>
                         </MudButtonGroup>
                     </ToolBarContent>
                     <HeaderContent>
