--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -6,7 +6,7 @@
 <PageTitle>Tracks</PageTitle>
 
 <MudContainer>
-    <MudDataGrid T="Track" Items="@TrackData" Class="my-2">
+    <MudDataGrid T="Track" Items="@TrackData" Class="my-2" Dense="true">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Tracks</MudText>
             <MudSpacer />
