--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -5,13 +5,19 @@
 
 <PageTitle>Post Race</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False">
-    <MudGrid>
-        <MudItem xs=12>
-            <MudPaper Elevation="15" Height="200px" Class="pa-4">
-                <MudStack Row="true" AlignItems="AlignItems.Center">
-                    <MudStack>
-                        <MudText Typo="Typo.h4">Post race</MudText>
+@if (!loading)
+{
+    <MudContainer MaxWidth="MaxWidth.False">
+        <MudGrid>
+            <MudItem xs=12>
+                <MudPaper Elevation="15" Height="200px" Class="pa-4">
+                    <MudStack Row="true" AlignItems="AlignItems.Center">
+                        <MudStack>
+                            <MudText Typo="Typo.h4">Post race</MudText>
+                            <MudText Color="Color.Warning">This page is quite unfinished, <br/>you can go to the standings though with a following button</MudText>
+                        </MudStack>
+
+                        <MudSpacer />
 
                         <MudText>Todo for this page:</MudText>
                         <MudList Color="Color.Warning">
@@ -19,60 +25,55 @@
                             <MudListItem>Podium with graphic</MudListItem>
                         </MudList>
 
-                        <MudText Color="Color.Warning">This page is quite unfinished, you can go to the standings though with a following button</MudText>
+                        <MudSpacer />
+
+                        <MudButton Color="Color.Primary" Variant="Variant.Outlined" OnClick="GoToStandings">Standings</MudButton>
                     </MudStack>
-
-                    <MudSpacer />
-
-                    <MudButton Color="Color.Primary" Variant="Variant.Outlined" OnClick="GoToStandings">Standings</MudButton>
-                </MudStack>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="4">
-            <MudPaper Class="mud-height-full">
-                <MudText>Final standings</MudText>
-                <MudText>
-                    Points for FL aren't shown here yet, they will be assigned though
-                </MudText>
-                <MudTable T="Result" Items="@Results.OrderBy(e => e.Position)" Dense="true" Class="extra-dense">
-                    <HeaderContent>
-                        <MudTh>#</MudTh>
-                        <MudTh>Name</MudTh>
-                        <MudTh>Points</MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd>
-                            @if (context.Status == RaceStatus.Racing)
-                            {
-                                <MudText Typo="Typo.h6">@(context.Position)</MudText>
-                            }
-                            else
-                            {
-                                <MudText Typo="Typo.button">@(context.Status)</MudText>
-                            }
-                        </MudTd>
-                        <MudTd>
-                            <MudText>@(context.SeasonDriver.Driver.FullName)</MudText>
-                        </MudTd>
-                        <MudTd>
-                            @if (context.Status == RaceStatus.Racing)
-                            {
-                                <MudText Typo="Typo.caption">@(ReadScoredResult(context.Position, (context.Grid == 1)))</MudText>
-                            }
-                            else
-                            {
-                                <MudText Typo="Typo.caption">0</MudText>
-                            }
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="4">
-            <MudPaper Class="mud-height-full">
-                <MudText Typo="Typo.subtitle1">Incidents during the race</MudText>
-                @if (Results.Any())
-                {
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="4">
+                <MudPaper Class="mud-height-full">
+                    <MudText Typo="Typo.subtitle1">Final standings</MudText>
+                    <MudText>
+                        Points for FL aren't shown here yet, they will be assigned though
+                    </MudText>
+                    <MudTable T="Result" Items="@Results.OrderBy(e => e.Position)" Dense="true" Class="extra-dense">
+                        <HeaderContent>
+                            <MudTh>#</MudTh>
+                            <MudTh>Name</MudTh>
+                            <MudTh>Points</MudTh>
+                        </HeaderContent>
+                        <RowTemplate>
+                            <MudTd>
+                                @if (context.Status == RaceStatus.Racing)
+                                {
+                                    <MudText Typo="Typo.h6">@(context.Position)</MudText>
+                                }
+                                else
+                                {
+                                    <MudText Typo="Typo.button">@(context.Status)</MudText>
+                                }
+                            </MudTd>
+                            <MudTd>
+                                <MudText>@(context.SeasonDriver.Driver.FullName)</MudText>
+                                </MudTd>
+                                <MudTd>
+                                    @if (context.Status == RaceStatus.Racing)
+                                {
+                                    <MudText Typo="Typo.caption">@(ReadScoredResult(context.Position, (context.Grid == 1)))</MudText>
+                                }
+                                else
+                                {
+                                    <MudText Typo="Typo.caption">0</MudText>
+                                }
+                            </MudTd>
+                        </RowTemplate>
+                    </MudTable>
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="4">
+                <MudPaper Class="mud-height-full">
+                    <MudText Typo="Typo.subtitle1">Incidents during the race</MudText>
                     <MudSimpleTable>
                         <thead>
                             <tr>
@@ -92,34 +93,34 @@
                             }
                         </tbody>
                     </MudSimpleTable>
-                }
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="4">
-            <MudPaper Class="mud-height-full">
-                <MudText>Upcoming penalties</MudText>
-                <MudTable T="DriverPenalty" Items="@DriverPenalties" Dense="true" Class="extra-dense">
-                    <HeaderContent>
-                        <MudTh>Name</MudTh>
-                        <MudTh>Incident</MudTh>
-                        <MudTh>Punish</MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd>
-                            <MudText>@(context.Name)</MudText>
-                        </MudTd>
-                        <MudTd>
-                            <MudText>@(context.Reason)</MudText>
-                        </MudTd>
-                        <MudTd>
-                            <MudText Typo="Typo.caption">@(context.Punishment)</MudText>
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
-            </MudPaper>
-        </MudItem>
-    </MudGrid>
-</MudContainer>
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="4">
+                <MudPaper Class="mud-height-full">
+                    <MudText Typo="Typo.subtitle1">Upcoming penalties</MudText>
+                    <MudTable T="DriverPenalty" Items="@DriverPenalties" Dense="true" Class="extra-dense">
+                        <HeaderContent>
+                            <MudTh>Name</MudTh>
+                            <MudTh>Incident</MudTh>
+                            <MudTh>Punish</MudTh>
+                        </HeaderContent>
+                        <RowTemplate>
+                            <MudTd>
+                                <MudText>@(context.Name)</MudText>
+                                </MudTd>
+                                <MudTd>
+                                    <MudText>@(context.Reason)</MudText>
+                                </MudTd>
+                                <MudTd>
+                                    <MudText Typo="Typo.caption">@(context.Punishment)</MudText>
+                                </MudTd>
+                            </RowTemplate>
+                        </MudTable>
+                    </MudPaper>
+                </MudItem>
+            </MudGrid>
+        </MudContainer>
+}
 
 @code {
     [Parameter]
@@ -134,14 +135,20 @@
 
     List<DriverPenalty> DriverPenalties = new();
 
+    bool loading;
+
     protected override async Task OnInitializedAsync()
     {
+        loading = true;
+
         Race = await _raceService.GetRaceById(RaceId);
         Results = await _raceService.GetResultsOfRace(RaceId);
         Season = await _seasonService.GetSeasonById(Race.SeasonId);
         Penalties = await _raceService.GetUnconsumedPenalties();
 
         allotments = Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new();
+
+        loading = false;
     }
 
     private int ReadScoredResult(int position, bool pole)
