--- a/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
@@ -192,10 +192,10 @@
                                                 <MudTextField @bind-Value="@context.Principal" Required />
                                             </MudTd>
                                             <MudTd DataLabel="Colour">
-                                                <MudColorPicker @bind-Text="@context.Colour" DisableAlpha="true" Required />
+                                                <MudColorPicker @bind-Text="@context.Colour" DisableAlpha="true" />
                                             </MudTd>
                                             <MudTd DataLabel="Accent">
-                                                <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" Required />
+                                                <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" />
                                             </MudTd>
                                             <MudTd DataLabel="Base">
                                                 <MudNumericField @bind-Value="@context.BaseValue" />
@@ -709,6 +709,7 @@
             model.ResetIdentifierFields();
             model.SeasonId = Season.Id;
             model.EngineId = engine.Id;
+            model.Name = string.IsNullOrEmpty(model.Name) ? engine.Name : model.Name;
 
             Model.SeasonEngines.Add(model);
         }
@@ -731,6 +732,8 @@
             model.SeasonId = Season.Id;
             model.TeamId = team.Id;
             model.Team = team;
+            model.Principal = string.IsNullOrEmpty(model.Principal) ? "Principal" : model.Principal;
+            model.ManufacturerId = model.ManufacturerId == 0 ? Manufacturers.First().Id : model.ManufacturerId;
 
             Model.SeasonTeams.Add(model);
         }
