--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -14,6 +14,7 @@
 @using SimTECH.Data.Services
 @using SimTECH.Extensions
 @using SimTECH.PageModels
+@using SimTECH.PageModels.SeasonModels
 @using SimTECH.Providers
 @using SimTECH.Shared
 @using System.ComponentModel
